# sociology-agentic-stack

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
docs/: ACCEPTANCE_TESTS.md  ARCHITECTURE.md  DECISIONS.md  HOST_VALIDATION.md  INTEGRATION_MAP.md  RUNBOOK.md  SECURITY.md  STATE.md  USER_MANUAL.md
integrations/config/: router.yaml
integrations/langfuse/: README.md  tracing.py
integrations/litellm/: README.md  config.yaml
kestra/: Dockerfile  README.md
kestra/flows/: corpus_ingest.yaml  research_session.yaml
schemas/: ontology.yaml  pack_manifest.yaml
schemas/artifact_schemas/: claim.jsonschema  critique_finding.jsonschema  glossary_entry.jsonschema  summary_metadata.jsonschema
schemas/templates/: critique_citation.yaml  critique_schema.yaml  synthesize_claims.yaml  synthesize_glossary.yaml  synthesize_summary.yaml
scripts/: _common.py  archive_session.py  docker_compose.sh  run_review.py  run_session.py  run_sherpa_workflow.py  setup.sh  smoke_test.py  sync_prompts_to_langfuse.py  validate_schema_pack.py
state_machines/: review_session.json  sociology_session.json
tests/: test_sherpa_schema_validation.py
